# llvm-project-prepo

./: .gitignore  .gitmodules  README.md
.github/workflows/: commit-tests.yml
clang/include/clang/Frontend/: FrontendOptions.h
clang/lib/Basic/Targets/: X86.h
clang/lib/CodeGen/: BackendUtil.cpp  CGObjCMac.cpp  CodeGenAction.cpp  CodeGenModule.cpp
clang/lib/Driver/: CMakeLists.txt  Driver.cpp  ToolChain.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  Gnu.cpp  Repo.cpp  Repo.h
clang/test/Driver/: repo-toolchain-linux-musl.c
compiler-rt/lib/builtins/: CMakeLists.txt
libcxx/: CMakeLists.txt
libcxx/cmake/caches/: Apple.cmake
libcxx/docs/: ReleaseNotes.rst
libcxx/lib/abi/: x86_64-apple-darwin.v1.abilist
libcxx/src/: CMakeLists.txt
libcxxabi/: CMakeLists.txt
libcxxabi/src/: CMakeLists.txt
libunwind/src/: CMakeLists.txt
lld/ELF/: Relocations.cpp
llvm/: CMakeLists.txt
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/include/llvm-c/: DebugInfo.h
llvm/include/llvm/ADT/: Triple.h
llvm/include/llvm/Bitcode/: LLVMBitCodes.h
llvm/include/llvm/CodeGen/: TargetLoweringObjectFileImpl.h
llvm/include/llvm/IR/: FixedMetadataKinds.def  LLVMContext.h  LegacyPassManagers.h  MDBuilder.h  Metadata.def  Module.h  RepoDefinition.h  RepoGlobals.h  RepoHashCalculator.h  RepoTicket.h
llvm/include/llvm/MC/: MCAsmInfoRepo.h  MCContext.h  MCObjectFileInfo.h  MCRepoObjectWriter.h  MCRepoStreamer.h  MCRepoTicketFile.h  MCSection.h  MCSectionRepo.h  MCStreamer.h  MCSymbol.h  MCSymbolRepo.h
llvm/include/llvm/Support/: FileSystem.h  MD5.h  TargetRegistry.h  raw_ostream.h
llvm/include/llvm/Transforms/: IPO.h
llvm/lib/AsmParser/: LLParser.cpp
llvm/lib/Bitcode/Reader/: MetadataLoader.cpp
llvm/lib/Bitcode/Writer/: BitcodeWriter.cpp
llvm/lib/CodeGen/: TargetLoweringObjectFileImpl.cpp
llvm/lib/CodeGen/AsmPrinter/: AsmPrinter.cpp  DwarfDebug.cpp
llvm/lib/IR/: AsmWriter.cpp  CMakeLists.txt  DataLayout.cpp  LLVMContext.cpp  LLVMContextImpl.h  LegacyPassManager.cpp  MDBuilder.cpp  RepoDefinition.cpp  RepoGlobals.cpp  RepoHashCalculator.cpp  RepoTicket.cpp  Verifier.cpp
llvm/lib/MC/: CMakeLists.txt  MCAsmBackend.cpp  MCAsmInfoRepo.cpp  MCContext.cpp  MCDwarf.cpp  MCObjectFileInfo.cpp  MCRepoObjectTargetWriter.cpp  MCRepoStreamer.cpp  MCRepoTicketFile.cpp  MCSectionRepo.cpp  RepoObjectWriter.cpp
llvm/lib/MC/MCParser/: AsmParser.cpp
llvm/lib/Support/: Signposts.cpp  Triple.cpp
llvm/lib/Support/Unix/: Path.inc
llvm/lib/Support/Windows/: Path.inc
llvm/lib/Transforms/IPO/: CMakeLists.txt  ElimAvailExtern.cpp  IPO.cpp  PassManagerBuilder.cpp  RepoMetadataGeneration.cpp  RepoPruning.cpp
llvm/lib/Transforms/Instrumentation/: AddressSanitizer.cpp
llvm/lib/Transforms/Utils/: Evaluator.cpp
llvm/test/: CMakeLists.txt
llvm/test/Assembler/: repo-definition.ll  repo-global-object-missing-definitions.ll  repo-invalid-definition-linkage-zero.ll  repo-invalid-definition-linkage.ll  repo-linkage-field.ll  repo-missing-definitions.ll  repo-pruned-field.ll  repo-pruning-dependents.ll  repo-pruning.ll  repo-visibility-field.ll
llvm/test/Bindings/Go/: go.test
llvm/test/Feature/Repo/: fragments.py  repo-opt-O0-pipeline.ll  repo-opt-O1-pipeline.ll  repo-opt-O2-pipeline.ll  repo-opt-O3-pipeline.ll  repo-opt-Os-pipeline.ll  repo-opt-pipeline.ll  repo_GOIMapCrash.ll  (+65 more)
llvm/test/Other/: pass-pipelines.ll
llvm/test/Verifier/: module-repo-definitions.ll
llvm/tools/: CMakeLists.txt
llvm/tools/opt/: opt.cpp
llvm/tools/repo-create-ticket/: CMakeLists.txt  RepoCreateTicket.cpp
llvm/tools/repo-fragments/: CMakeLists.txt  RepoFragments.cpp
llvm/tools/repo-ticket-dump/: RepoTicketDump.cpp
llvm/tools/repo2obj/: R2OELFOutputSection.cpp  R2OELFOutputSection.h  R2OELFSectionType.cpp  R2OELFSectionType.h  R2OELFStringTable.cpp  R2OELFStringTable.h  R2OELFSymbolTable.h  WriteHelpers.cpp  WriteHelpers.h  repo2obj.cpp
llvm/unittests/IR/: CMakeLists.txt  MetadataTest.cpp  RepoDefinitionTest.cpp  RepoModuleHashTest.cpp  RepoTicketMDTest.cpp  VerifierTest.cpp
llvm/unittests/MC/: CMakeLists.txt
llvm/unittests/Support/: Path.cpp
llvm/utils/repo/: Makefile  elf.cmake  full_repo.cmake  link++.py  link.py  repo.cmake  repo.json  wrap_tool.py
rld/: .gitmodules  CMakeLists.txt
rld/include/rld/: AdvanceEnum.h  Algorithm.h  Archive.h  CSAlloc.h  Context.h  Contribution.h  Copy.h  Driver.h  ELF.h  ELFOutput.h  ELFProgramHeaders.h  ELFSectionHeaders.h  ELFSectionNames.h  ELFStringTable.h  ELFSymbolTable.h  ElfOutput.h  ErrorCode.h  GroupSet.h  Identify.h  IdentifyPass.h  LayoutBuilder.h  MPMCQueue.h  MathExtras.h  OutputSection.h  Scanner.h  SectionArray.h  SectionKind.h  Shadow.h  SpecialNames.h  Symbol.h  SymbolEmitList.h  TypeList.h  Types.h  Variant.h  WorkItem.h  XfxScanner.h  context.h  copy.h  elf.h  scanner.h  (+2 more)
rld/lib/: Archive.cpp  CMakeLists.txt  CSAlloc.cpp  Context.cpp  Copy.cpp  Driver.cpp  ELF.cpp  ELFOutput.cpp  ELFProgramHeaders.cpp  ELFSectionHeaders.cpp  ELFSectionNames.cpp  ELFStringTable.cpp  ELFSymbolTable.cpp  ElfOutput.cpp  ErrorCode.cpp  GroupSet.cpp  Identify.cpp  IdentifyPass.cpp  LayoutBuilder.cpp  Scanner.cpp  SectionKind.cpp  Shadow.cpp  SpecialNames.cpp  Symbol.cpp  WorkItem.cpp  XfxScanner.cpp  config.h.in  context.cpp  copy.cpp  elf.cpp  scanner.cpp  symbol.cpp
rld/test/: CMakeLists.txt  GlobalCtors.json  got1.json  got2.json  ifx.json  ifx2.json  init_array_end.json  lit.cfg.py  lit.site.cfg.py.in  phdr.json  r_x86_64_tpoff32.json  reused_fragment.json  rodata_segment.json  shared_fragment.json  shared_fragment_using_internal.json  shdr.json  symbol_order.json  symtab.json  undefined_reference.json  undefined_weak_reference.json
rld/tools/: CMakeLists.txt
rld/tools/rld/: CMakeLists.txt  rld.cpp
rld/unit_tests/: CMakeLists.txt
rld/unit_tests/rld/: CMakeLists.txt  CompilationBuilder.cpp  CompilationBuilder.h  EmptyStore.cpp  EmptyStore.h  ErrorFn.h  StringAdder.cpp  StringAdder.h  TestCSAlloc.cpp  TestMPMCQueue.cpp  TestMathExtras.cpp  TestSymbolEmitList.cpp  TestSymbolResolver.cpp  TestVariant.cpp  TestXfxResolver.cpp
(+43 files in other folders)
